RC: Generate main frame navigation commit event for navigations to an error page.

For some reason, ResourceCoordinatorTabHelper::DidFinishNavigation()
currently skips updating the frame tree and notifying the
PageResourceCoordinator of main frame navigation commit when there is a
navigation to an error page. This causes multiple problems:

- The error page stays in the LOADING state forever.
- The main frame URL is not updated in PageCoordinationUnitImpl.

A navigation to an error page is just like a navigation to a normal
page (the error page has a main frame, a renderer process), so there is
no reason to have special case for it in
ResourceCoordinatorTabHelper::DidFinishNavigation().

Bug: 855180
Change-Id: Ifbe52ce714ef04af574e00041f8b970c13c08f5d
Reviewed-on: https://chromium-review.googlesource.com/1110697
Reviewed-by: Sébastien Marchand <sebmarchand@chromium.org>
Commit-Queue: François Doray <fdoray@chromium.org>
Cr-Commit-Position: refs/heads/master@{#569433}
Former-commit-id: cc05ae46788bb466c985539a4d5126191cff8fe7